--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,80 +16,50 @@
 						<ul class="item-list"> 
 								<li>
 									<div class="medium-3 columns">
+										<img src="images/apps/10monkeys.jpg">
 									</div>
 									<div class="medium-9 columns">
-										<h3>The basics of Ukulele</h3>
-										<span class="author">Rockway</span>
-										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+										<h3>10 Monkeys Math World</h3>
+										<span class="author"><a href="#">10 Monkeys</a></span>
+										<p>Web-based individual math practicing program, practice with thousands of activities.</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-
+										<img src="images/apps/geogebra.png">
 									</div>
 									<div class="medium-9 columns">
-										<h3>GuitarBots</h3>
-										<span class="author">Ovelin</span>
+										<h3>Geogebra</h3>
+										<span class="author"><a href="#">Ovelin</a></span>
 										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-										
+										<img src="images/apps/timeguru.jpg">
 									</div>
 									<div class="medium-9 columns">
-										<h3>Geogebra</h3>
-										<span class="author">Geogebra</span>
-										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+										<h3>Time Guru App</h3>
+										<span class="author"><a href="#">Geogebra</a></span>
+										<p>Strengthen your inner sense of rhythm! Time Guru is the only metronome with the ability to mute its sound at random, in sequenced patterns, so that ... </p>
 									</div>
 								</li>
 							</ul>
 					</section>
-					<section class="carousel">
-						<img src="/images/GB_PracticeMode.jpg">
+					<section class="carousel bordered">
+						<div class="image">
+							<img src="/images/apps/better-ears.jpg">
+							<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
+							<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
+						</div>
 						<div class="caption">
-							<h1>Guitar Bots</h1>
+							<h1>Better Ears</h1>
 							<div class="info">
 								<span class="autor"><a href="#">Ovelin</a></span>
 							</div>
-							<p>This is a cool text related the product</p>
+							<p>Better Ears helps you grow your musical skills and enhance your hearing capabilities. There are already ten different exercises included, starting from interval recognition all the way to chord progressions - perfect for beginners and music-masters alike!</p>
 						</div>
-						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
-						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
-					</section>
-					<section class="bordered">
-						<h2>Popular games</h2>
-						<ul class="item-list"> 
-								<li>
-									<div class="medium-3 columns">
-									</div>
-									<div class="medium-9 columns">
-										<h3>The basics of Ukulele</h3>
-										<span class="author">Rockway</span>
-										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
-									</div>
-								</li>
-								<li>
-									<div class="medium-3 columns">
-
-									</div>
-									<div class="medium-9 columns">
-										<h3>GuitarBots</h3>
-										<span class="author">Ovelin</span>
-										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
-									</div>
-								</li>
-								<li>
-									<div class="medium-3 columns">
-										
-									</div>
-									<div class="medium-9 columns">
-										<h3>Geogebra</h3>
-										<span class="author">Geogebra</span>
-										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
-									</div>
-								</li>
-							</ul>
+						
 					</section>
 					
 					
@@ -102,7 +72,7 @@
 							<div class="info">
 								<span class="autor"><a href="#">Ovelin</a></span>
 							</div>
-							<p>This is a cool text related the product</p>
+							<p>GuitarBots makes learning to play the guitar easy, fun and motivating. The game is played with any REAL guitar (acoustic or electric)!</p>
 						</div>
 						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
 						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
@@ -112,31 +82,32 @@
 						<ul class="item-list"> 
 								<li>
 									<div class="medium-3 columns">
+										<img src="/images/apps/bus.png">
 									</div>
 									<div class="medium-9 columns">
-										<h3>The basics of Ukulele</h3>
-										<span class="author">Rockway</span>
-										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+										<h3>Mathworlds 2</h3>
+										<span class="author"><a href="#">Mathemathicas</a></span>
+										<p>Exercises and games for every skill level.</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-
+										<img src="/images/apps/finland.jpg">
 									</div>
 									<div class="medium-9 columns">
-										<h3>GuitarBots</h3>
-										<span class="author">Ovelin</span>
-										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
+										<h3>The History of Finland</h3>
+										<span class="author"><a href="#">HistoryAwe</a></span>
+										<p>Live through the history of Finland!</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-										
+										<img src="/images/apps/traffic.png">
 									</div>
 									<div class="medium-9 columns">
-										<h3>Geogebra</h3>
-										<span class="author">Geogebra</span>
-										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+										<h3>Trafficmania</h3>
+										<span class="author"><a href="#">Traffitis</a></span>
+										<p>Learn how the traffic works by award winning traffic simulator game.</p>
 									</div>
 								</li>
 							</ul>
@@ -148,31 +119,33 @@
 							<ul class="item-list"> 
 								<li>
 									<div class="medium-3 columns">
+										<img src="/images/apps/egypt.jpg">	
 									</div>
 									<div class="medium-9 columns">
-										<h3>The basics of Ukulele</h3>
-										<span class="author">Rockway</span>
-										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+										<h3>The world of ancient egypt</h3>
+										<span class="author"><a href="#">Kai T.</a></span>
+										<p>A video lecture of 2nd grade egyptian history.</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-
+									<img src="/images/apps/chemistry.png">
 									</div>
 									<div class="medium-9 columns">
-										<h3>GuitarBots</h3>
-										<span class="author">Ovelin</span>
-										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
+										<h3>Learn Chemistry by testing</h3>
+										<span class="author"><a href="#">Liisa K.</a></span>
+										<p>A video that guides you through the first chemistry lab test of elementary school
+chemistry; lab tests in a classroom.</p>
 									</div>
 								</li>
 								<li>
 									<div class="medium-3 columns">
-										
+										<img src="/images/apps/geogebra.png">
 									</div>
 									<div class="medium-9 columns">
 										<h3>Geogebra</h3>
-										<span class="author">Geogebra</span>
-										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+										<span class="author"><a href="#">Geogeb</a></span>
+										<p>Free dynamic program for learning and teaching mathemathics and natural sciences.</p>
 									</div>
 								</li>
 							</ul>
@@ -182,8 +155,8 @@
 						<ul class="post-list comments">
 							<li>
 								<a href="#">
-										How to go through the student composed music in the classroom?</a>
-								
+										How to go through the student composed music in the classroom?
+								</a>
 							</li>
 						</ul>
 						<a href="#" class="button small right">Go to the forum</a>
@@ -221,9 +194,7 @@
 								<h3>Swedish</h3>
 							</a>
 							<a href="#" class="hex-item">
-								<div class="hex">   
-									<div class="inner">
-									</div>    
+								<div class="hex" style="background-image: url(images/subjects/other.jpg);" >   
 									<div class="corner-1"></div>
 									<div class="corner-2"></div>    
 								</div> 
