--- a/app/styles/_subjectPage.scss
+++ b/app/styles/_subjectPage.scss
@@ -1,8 +1,6 @@
 // Subject-page related css
 
 #subjectPage {
-	
-	
 	.right-col {
 		section {
 			margin-bottom: 1em;
@@ -21,6 +19,13 @@
 			}
 		}
 	}
+	.carousel {
+		height: 24em;
+		.caption {
+			position: absolute;
+			bottom: 0;
+		}
+	}
 	&.topic {
 		
 	}
@@ -32,9 +37,21 @@
 
 #topicPage {
 	header {
-		h1, a {
-			color: #444;
+		height: 151px;
+		/*background: transparent;*/
+
+		i {
+			color: #fff;
 		}
+	}
+	.header-image {
+		/*position: absolute;
+		top: 0;
+		left: 0;
+		width: auto;
+		opacity: 1;
+		//opacity: 0.2;
+		-webkit-filter: grayscale(0%);*/
 	}
 	
 	.button-group a {
