--- a/app/views/item.html
+++ b/app/views/item.html
@@ -8,13 +8,23 @@
 				<span class="specs">Web based application | Requires: Modern web browser (IE8+, FF5+, Chrome 10+)</span>
 			</div>
 			<div class="small-3 columns">
-				<span class="rating">
-					<i class="icon-star"></i>
-					<i class="icon-star"></i>
-					<i class="icon-star"></i>
-					<i class="icon-star"></i>
-					<i class="icon-star2"></i>
-				</span>
+				<div class="row">
+					<span class="rating">
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star"></i>
+						<i class="icon-star2"></i>
+					</span>
+					<p><a href="#">5 reviews</a></p>
+				</div>
+				<div class="row">
+					<p>Price: Starting from 5,99€</p>
+				</div>
+				<div class="row">
+					<a class="button small">Try it</a>
+					<a class="button small">Buy it</a>
+				</div>
 
 			</div>
 		</header>
@@ -26,26 +36,25 @@
 				<div class="small-4 columns">
 					<div class="item-picture">
 					</div>
-					<h3>Pricing</h3>
 					<div class="row">
-						<div class="small-12 columns">
-							<h4>Single licence:</h4>
-							<p>6,99€/month</p>
+						<div class="small-6 columns">
+							<div class="item-picture" style="height: 150px">
+							</div>
+							<div class="item-picture" style="height: 150px">
+							</div>
 						</div>
-						<div class="small-12 columns">
-							<h4>1 classroom:</h4>
-							<p>20 credits</p>
+						<div class="small-6 columns">
+							<div class="item-picture" style="height: 150px">
+							</div>
+							<div class="item-picture" style="height: 150px">
+							</div>
 						</div>
-						<div class="small-12 columns">
-							<h4>Whole school:</h4>
-							<button>Contact us</button>
-						</div>	
 					</div>
+
 				</div>
 				<div class="small-8 columns">
 					<div class="ingress">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat fringilla lacinia. Donec tempus massa erat. Cras eget mollis lectus. Vestibulum posuere molestie vulputate. Nunc porttitor semper commodo. Proin vel scelerisque dui. Sed fermentum neque sed felis lobortis congue. Maecenas sed neque dignissim, consequat justo nec, dictum ligula</p>
-						<a class="button">Download a demo</a>
 						<hr>
 					</div>
 					<h2>Awesome way to learn multiplying!</h2>
@@ -63,6 +72,7 @@
 		<tab heading="Reviews (5)"></tab>
 		<tab heading="Discussion"></tab>
 		<tab heading="Specifications"></tab>
+		<tab heading="Pricing"></tab>
 	</tabset>
 	
 </div>
