Finetuning to the final pitch

--- a/app/views/item.html
+++ b/app/views/item.html
@@ -1,11 +1,11 @@
 <div id="itemPage">
 	<div class="background">
-		<header class="row">
+		<header>
 			<div class="small-1 columns back"><i class="icon-arrow-left"></i></div>
 			<div class="small-8 columns">
-				<span><a href="company">10 Gorillas</a></span>
-				<h1>10 Gorillas Multiplication</h1>
-				<span class="specs">Web based application | Requires: Modern web browser (IE8+, FF5+, Chrome 10+)</span>
+				<span><a href="company">appsolute GmbH</a></span>
+				<h1>Better Ears for iPhone</h1>
+				<span class="specs">iPhone application</span>
 			</div>
 			<div class="small-3 columns">
 				<div class="row">
@@ -19,9 +19,9 @@
 					<p><a href="#">5 reviews</a></p>
 				</div>
 				<div class="row">
-					<p>Price: Starting from 5,99€</p>
+					<p>Price: Starting from 14,99€</p>
 				</div>
-				<div class="row">
+				<div class="row" style="font-size: 1.2em; color: #fff;">
 					<a class="button small">Try it</a>
 					<a class="button small">Buy it</a>
 				</div>
@@ -35,18 +35,23 @@
 			<div class="row">
 				<div class="small-4 columns">
 					<div class="item-picture">
+						<img src="/images/apps/better_ears_1.jpg">
 					</div>
 					<div class="row">
 						<div class="small-6 columns">
 							<div class="item-picture" style="height: 150px">
+								<img src="/images/apps/better_ears_1.jpg">
 							</div>
 							<div class="item-picture" style="height: 150px">
+								<img src="/images/apps/better_ears_2.jpg">
 							</div>
 						</div>
 						<div class="small-6 columns">
 							<div class="item-picture" style="height: 150px">
+								<img src="/images/apps/better_ears_3.jpg">
 							</div>
 							<div class="item-picture" style="height: 150px">
+								<img src="/images/apps/better_ears_1.jpg">
 							</div>
 						</div>
 					</div>
@@ -54,17 +59,74 @@
 				</div>
 				<div class="small-8 columns">
 					<div class="ingress">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat fringilla lacinia. Donec tempus massa erat. Cras eget mollis lectus. Vestibulum posuere molestie vulputate. Nunc porttitor semper commodo. Proin vel scelerisque dui. Sed fermentum neque sed felis lobortis congue. Maecenas sed neque dignissim, consequat justo nec, dictum ligula</p>
-						<hr>
+						<p>»Better Ears« (formerly known as Karajan® - Music and Ear Trainer), is an educational music and ear training app, which helps you grow your musical skills and enhance your hearing capabilities. There are ten different exercises included, starting from interval recognition all the way to chord progressions - perfect for beginners and music-masters alike!</p>
+						
 					</div>
-					<h2>Awesome way to learn multiplying!</h2>
+					<h2>You decide how to train!</h2>
 					<p>
-					Phasellus a iaculis lectus. Nulla ut ligula ultricies, luctus felis et, cursus mauris. Duis dictum laoreet est, vel tincidunt felis pretium quis. Sed consectetur convallis turpis mollis suscipit. In ac ullamcorper purus. Morbi rhoncus lectus sapien, malesuada suscipit orci consequat ac. Nullam condimentum felis nunc, feugiat sodales lorem venenatis sit amet. Nulla interdum pulvinar mi, id ornare est rhoncus non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In eget leo dignissim, tincidunt leo nec, iaculis nunc.</p>
-					<p>
+					With Better Ears you can decide for yourself what your training routine should look like. There are no rules you have to follow, you decide when to start and how often to practice.</p>
 
-					Etiam in enim non mi viverra pharetra mattis sed metus. Sed sed nibh ut diam dictum imperdiet. Fusce imperdiet porta lacinia. Nam vel tincidunt ante. Vestibulum consequat nisl a ullamcorper luctus. Nullam elementum interdum lorem, vitae convallis enim consequat in. Suspendisse vel bibendum eros, in ultrices est. Integer accumsan consequat nisl, non lobortis urna dignissim porttitor. Nunc malesuada euismod nibh, eu cursus dui placerat at. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus laoreet justo eget nunc bibendum, et viverra justo euismod. Nulla non ipsum luctus, facilisis urna in, fringilla diam. Ut pellentesque erat ac elit consequat pulvinar. Nullam eleifend tincidunt pulvinar.</p><p>
+					<h3>10 different exercises included</h3>
+						
+						<ul>
+						<li>Interval recognition</li>
+						<li>Scale recognition</li>
+						<li>Chord recognition</li>
+						<li>Chord progressions</li>
+						<li>Pitch recognition</li>
+						<li>Tempo recognition</li>
+						<li>Key Signature recognition</li>
+						<li>Interval music reading</li>
+						<li>Scale music reading</li>
+						<li>Chord music reading</li>
+						</ul>
+					
 
-					Duis metus ante, euismod sit amet porttitor in, dignissim eu lacus. Phasellus egestas semper augue, sit amet porttitor metus sagittis vel. Nunc vitae tincidunt sapien, ac ultricies lectus. Vivamus in accumsan tortor, nec suscipit sapien. Maecenas tortor dolor, laoreet ac mattis nec, viverra id neque. Integer et velit faucibus, varius lacus quis, convallis metus. Curabitur placerat lorem in gravida dictum. Duis et rutrum mi. Integer feugiat nisl nec sem bibendum gravida. Integer in dolor sodales, venenatis velit quis, rutrum elit. Sed bibendum turpis eu felis consectetur, vitae pellentesque odio posuere. Nulla sit amet vulputate ipsum.</p>
+<h3>6 different instruments
+
+Choose your training sound from six different instruments. Better Ears comes with Acoustic Grand piano, Bright Acoustic Piano, Electric Grand Piano, Drawbar Organ, Nylon Acoustic Guitar and Steel Acoustic Guitar.
+
+
+<h3>Keyboard and Fretboard
+
+»Better Ears« comes with a virtual keyboard and virtual guitar fretboard. You can key notes on either.
+
+
+<h3>Four preset levels
+
+»Better Ears« ships with four preset levels:
+<ul>
+<li>Beginner</li>
+<li>Easy</li>
+<li>Normal</li>
+<li>Professional</li>
+</ul>
+
+
+<h3>Unlimited custom levels</h3>
+<p>
+Additionally you can can create your own levels, letting you train to your own specific needs. Put yourself in "Training Camp" to learn church modes, or concentrate on those two pesky intervals that constantly cause you problems.</p>
+
+
+<h3>Sync all of your devices</h3>
+<p>
+With »Better Ears« you can keep your Mac and your iOS devices in sync. You can choose what to sync: Your own levels, your statistics, your settings or all of this.</p>
+
+
+<h3>MIDI Support</h3>
+<p>
+»Better Ears« supports routing sound through an external MIDI device, allowing you to use your existing MIDI master keyboard or sound module. You can even control »Better Ears« using a connected keyboard.</p>
+
+
+<h3>Statistics</h3>
+<p>
+For every exercise »Better Ears« knows all your current stats, including how often you have answered each question correctly or incorrectly.</p>
+
+
+<h3>Wikipedia integration</h3>
+<p>
+»Better Ears« shows the relevant Wikipedia article for the current exercise. If a relevant article is not available online, another topically-appropriate article will be shown instead.</p>
+
 							
 				</div>
 			</div>
