--- a/app/styles/_itemPage.scss
+++ b/app/styles/_itemPage.scss
@@ -20,8 +20,7 @@
 		}
 	}
 	.item-picture {
-		background: url("http://upload.wikimedia.org/wikipedia/commons/2/24/Gorilla_gorilla11.jpg"); 
-		height: 23em;
+		//height: 23em;
 		border-radius: 3px;
 		margin-bottom: 2em;
 	}
