Added wish it-button and made the price larger

--- a/app/styles/_itemPage.scss
+++ b/app/styles/_itemPage.scss
@@ -18,6 +18,10 @@
 		.rating, .specs {
 			color: #fff;
 		}
+		.price {
+			font-size: 1.3em;
+			color: #fff;
+		}
 	}
 	.item-picture {
 		//height: 23em;
