--- a/app/views/item.html
+++ b/app/views/item.html
@@ -19,11 +19,12 @@
 					<p><a href="#">5 reviews</a></p>
 				</div>
 				<div class="row">
-					<p>Price: Starting from 14,99€</p>
+					<p class="price">Starting from <strong>14,99€</strong></p>
 				</div>
 				<div class="row" style="font-size: 1.2em; color: #fff;">
 					<a class="button small">Try it</a>
 					<a class="button small">Buy it</a>
+					<a class="button small">Wish it</a>
 				</div>
 
 			</div>
